--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
   - init: >
-      wget -qOdatabase-setup.sh https://codejudge-starter-repo-artifacts.s3.ap-south-1.amazonaws.com/backend-project/gitpod/python/db-gitpod-setup.sh &&
+      wget -qOdatabase-setup.sh https://codejudge-starter-repo-artifacts.s3.ap-south-1.amazonaws.com/backend-project/gitpod/python/2.7/db-gitpod-setup.sh &&
       chmod 0755 database-setup.sh &&
       bash database-setup.sh
 ports:
