--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,7 @@ tasks:
     command: python manage.py runserver 0.0.0.0:8080
 ports:
   - port: 8080
-    onOpen: ignore
+    onOpen: open-preview
     visibility: public
 
 vscode:
